fixes checkout not showing if user is admin

--- a/src/public/stylesheets/cart.css
+++ b/src/public/stylesheets/cart.css
@@ -601,6 +601,7 @@ ol, ul {
 
     .mainContainer {
       margin-top: 12em;
+      margin-bottom: 5em;
     }
 
     .cardHolder {
